--- a/Circular_Visualization.html
+++ b/Circular_Visualization.html
@@ -139,8 +139,6 @@
 </head>
 <body>
 
-
-
 <img style="position:fixed; top:0px; left:0px; width:950px; height:680px; border:none;" src="img/checkware.png">
 
 <svg style="position:fixed; top:100px; left:430px; width:500px; height:490px; border:none;" >
@@ -152,12 +150,13 @@
     <g id="pat1" transform="translate(250, 245)"></g>
     <g id="interaction" transform="translate(250, 245)"></g>
     <g id="progress" transform="translate(250, 245)"></g>
-
 </svg>
+
 <div style="position:fixed; top:600px; left:650px; width:200px; height:90px; border:none;">
-    <span class="dot active" onclick="location.href='viz1-1.html';"></span>
-    <span class="dot" onclick="location.href='viz1-2.html';"></span>
-    <span class="dot" onclick="location.href='viz1-3.html';"></span>
+    <span class="dot" id="1" onclick="location.href='Circular_Visualization.html'; window.localStorage.setItem('week', current_week-3);"></span>
+    <span class="dot" id="2" onclick="location.href='Circular_Visualization.html'; window.localStorage.setItem('week', current_week-2);"></span>
+    <span class="dot" id="3" onclick="location.href='Circular_Visualization.html'; window.localStorage.setItem('week', current_week-1);"></span>
+    <span class="dot active" onclick="location.href='Circular_Visualization.html';"></span>
 </div>
 
 <div style="position:fixed; top:64px; left:15px; width:400px; height:60px; border:none;">
@@ -184,6 +183,11 @@
     // OUR CODE STARTS HERE:
     // Here we use our own patient data from our model.
 
+
+    var warning_colors = {low: '#C0EC83', low_middle: '#A7E074', middle: '#96CC39', middle_high: '#6BA32D', high: 'orange', very_high: 'red', undetermined: '#7F8389'}
+
+
+    // Here we use our own patient data from our model.
     d3.json("http://localhost:8000/data/patient_data.json", function(data) {
         // //                                              [0-14]          [0-8]             [0-14]
         //     var pdata=[ "Ingvild Emilia.    Progress:       Week 10.   Module 4.      Messages 6",
@@ -209,7 +213,6 @@
         var inrcData = [];  // Interaction data...
 
 
-        var warning_colors = {low: '#C0EC83', low_middle: '#A7E074', middle: '#96CC39', middle_high: '#6BA32D', high: 'orange', very_high: 'red', undetermined: '#7F8389'}
         // var color =["lightgrey", "lightgreen", "#ff3f00", "lightgreen", "#ff3f00", "lightgreen", "lightgrey", "#ff3f00", "lightgreen", "lightgrey", "lightgreen", "#ff3f00"];
         // var color2=["#999999"  , "#00dd00"   , "#df3d11", "#00dd00"   , "#df3d11", "#00dd00"   , "#999999"  , "#df3d11", "#00dd00"   , "#999999"  , "#00dd00"   , "#df3d11"];
         // var logpages=["viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html", "viz3.html"];
@@ -218,16 +221,20 @@
         modules_data = data.modules
         current_week = treatment_data.current_week
 
+        if(window.localStorage.getItem('week')  !== null) {
+            current_week = parseInt(window.localStorage.getItem('week'))
+            localStorage.removeItem("week")
+        }
+        console.log(current_week)
+
         var amount_of_modules = treatment_data.amount_of_modules;
         var amount_of_patients = treatment_data.amount_of_patients;
 
-
-        // temporary solution
+        // temporary solution for data retrieval
         for (var i = 0; i < amount_of_patients; i++) {
             patient_name = modules_data[0].patient_data[i].patient_name
             module = ""
             number_of_messages = ""
-            console.log(patient_name)
             weekData.push(current_week)
             progData.push(4)
             inrcData.push(8)
@@ -241,213 +248,212 @@
         drawCircles(0, 250, 13)
 
         // arcs.. progress showing (MADRS) score.. and current week...
-        drawWeekArcs(0.1665, 13)
+        drawWeekArcs(0.1665, 13, weekData, pdata)
 
         // Progress bars..... interaction....
-        drawInrcArcs(0.1665, 0.22, 0.35, 13)
+        drawInrcArcs(0.1665, 0.22, 0.35, 13, inrcData)
 
         // Progress bars..... module completion....
-        drawProgressArcs(0.1665, 0.15, 0.35, 14.0/8.0, 13)
+        drawProgressArcs(0.1665, 0.15, 0.35, 14.0/8.0, 13, progData)
+    });
 
 
-        function drawBackGroundLines() {
+    function drawBackGroundLines() {
 
-            // lines seperating patient data...
-            var lineGenerator = d3.line()
-                .defined(function(d) {
-                    return d !== null;
-                });
+        // lines seperating patient data...
+        var lineGenerator = d3.line()
+            .defined(function(d) {
+                return d !== null;
+            });
 
-            var points = [];
+        var points = [];
 
-            for (var i = 1, angle = 0.52; i <= 12; i++, angle += 0.524) {
+        for (var i = 1, angle = 0.52; i <= 12; i++, angle += 0.524) {
 
-                var xpos1 = 43.0 * Math.cos(angle);
-                var ypos1 = 43.0 * Math.sin(angle);
-                var xpos2 = 250.0 * Math.cos(angle);
-                var ypos2 = 250.0 * Math.sin(angle);
-                points.push([xpos1, ypos1]);
-                points.push([xpos2, ypos2]);
-                points.push([xpos2+1, ypos2+1]);
-                points.push(null);
-            }
-
-            var pathData = lineGenerator(points);
-
-            // Create a path element and set its d attribute
-            d3.select('#segments')
-                .attr('d', pathData);
-
+            var xpos1 = 43.0 * Math.cos(angle);
+            var ypos1 = 43.0 * Math.sin(angle);
+            var xpos2 = 250.0 * Math.cos(angle);
+            var ypos2 = 250.0 * Math.sin(angle);
+            points.push([xpos1, ypos1]);
+            points.push([xpos2, ypos2]);
+            points.push([xpos2+1, ypos2+1]);
+            points.push(null);
         }
 
-        function drawCircles(h, center, distance) {
-            var dataset = [];
-            for (var i = 0; i <= 14; i++) {
-                var newNumber = 44 + distance*i;
-                dataset.push(newNumber);
-            }
+        var pathData = lineGenerator(points);
 
-            var circles = d3.select('#weeks')
-                .selectAll('path')
-                .data(dataset)
-                .enter()
-                .append("circle");
+        // Create a path element and set its d attribute
+        d3.select('#segments')
+            .attr('d', pathData);
 
-            circles.attr("cx", function(d, i)
-            { return 0;
+    }
+
+    function drawCircles(h, center, distance) {
+        var dataset = [];
+        for (var i = 0; i <= 14; i++) {
+            var newNumber = 44 + distance*i;
+            dataset.push(newNumber);
+        }
+
+        var circles = d3.select('#weeks')
+            .selectAll('path')
+            .data(dataset)
+            .enter()
+            .append("circle");
+
+        circles.attr("cx", function(d, i)
+        { return 0;
+        })
+            .attr("cy", h/2) .attr("r", function(d) {
+            return d; }
+        )
+            .attr("fill", "rgba(128, 128, 128, 0.0)") .attr("stroke", "lightgrey") .attr("stroke-width", "1px");
+    }
+
+
+    function drawWeekArcs(aratio, distance, weekData, pdata) {
+
+        var arcGenerator = d3.arc()
+            .padAngle(.02)
+            .padRadius(100)
+            .cornerRadius(4);
+
+        var week_arcData = []
+        week_arcData.push({startAngle: 0, endAngle: aratio * Math.PI, innerRadius: 43, outerRadius: (44 + distance * weekData[0])})
+        for (var i = 0; i < 12; i++) {
+            week_arcData.push({startAngle: aratio * (i+1) * Math.PI, endAngle: aratio * (i+2) * Math.PI, innerRadius: 43, outerRadius: (44 + distance * weekData[i])})
+        }
+        d3.select('#pat1')
+            .selectAll('path')
+            .data(week_arcData)
+            .enter()
+            .append('path')
+            .attr("fill", function(d, i) {
+                return warning_colors[calculate_warning_color(modules_data[current_week-1].patient_data[i].madrs_score)];
             })
-                .attr("cy", h/2) .attr("r", function(d) {
-                return d; }
-            )
-                .attr("fill", "rgba(128, 128, 128, 0.0)") .attr("stroke", "lightgrey") .attr("stroke-width", "1px");
+            .on("click", function(d, i) {
+                window.localStorage.setItem('patient_id', i)
+                window.location = "progress_bar.html";
+            })
+            .on("mouseover", function(d, i) {
+                d3.select(this)
+                    .attr("fill", "#87ddb7");
+                var xPosition = window.event.clientX; // 250 + d.outerRadius * Math.cos( Math.PI * i * (360/12) / 180) ;
+                var yPosition = window.event.clientY; //  245 + d.outerRadius * Math.sin( Math.PI * i * (360/12) / 180) ;
+                //Update the tooltip position and value
+                d3.select("#tooltip")
+                    .style("left", xPosition + "px")
+                    .style("top", yPosition + "px")
+                    .select("#value")
+                    .text(pdata[i]);
+                d3.select("#tooltip")
+                    .classed("hidden", false);
+            })
+            .on("mouseout", function(d, i) {
+                d3.select(this)
+                    .attr("fill", warning_colors[calculate_warning_color(modules_data[current_week-1].patient_data[i].madrs_score)]);
+                d3.select("#tooltip").classed("hidden", true);
+            })
+            .attr('d', arcGenerator);
+
+    }
+
+
+    function drawInrcArcs(aratio, startbuffer, endBuffer, distance, inrcData) {
+
+        var arcGenerator = d3.arc()
+            .padAngle(0.2)
+            .padRadius(50)
+            .cornerRadius(4);
+
+        var inrc_arcData = []
+        inrc_arcData.push({startAngle: startbuffer, endAngle: startbuffer + aratio * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + distance * inrcData[0])})
+        for (var i = 0; i < 12; i++) {
+            inrc_arcData.push({startAngle: startbuffer + aratio * (i+1) * Math.PI, endAngle: startbuffer + aratio * (i+2) * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + distance * inrcData[i])})
         }
 
+        d3.select('#interaction')
+            .selectAll('path')
+            .data(inrc_arcData)
+            .enter()
+            .append('path')
+            .attr("fill", "grey")
+            .on("click", function(d, i) {
+                window.location = logpages[i];
+            })
+            .on("mouseover", function(d, i) {
+                var msg = Math.ceil(inrcData[i]);
+                if( msg < inrcData[i])
+                    msg = msg + 1;
 
-
-        function drawWeekArcs(aratio, distance) {
-
-            var arcGenerator = d3.arc()
-                .padAngle(.02)
-                .padRadius(100)
-                .cornerRadius(4);
-
-            var week_arcData = []
-            week_arcData.push({startAngle: 0, endAngle: aratio * Math.PI, innerRadius: 43, outerRadius: (44 + distance * weekData[0])})
-            for (var i = 0; i < 12; i++) {
-                week_arcData.push({startAngle: aratio * (i+1) * Math.PI, endAngle: aratio * (i+2) * Math.PI, innerRadius: 43, outerRadius: (44 + distance * weekData[i])})
-            }
-            d3.select('#pat1')
-                .selectAll('path')
-                .data(week_arcData)
-                .enter()
-                .append('path')
-                .attr("fill", function(d, i) {
-                    return warning_colors[calculate_warning_color(modules_data[0].patient_data[i].madrs_score)];
-                })
-                .on("click", function(d, i) {
-                    window.localStorage.setItem('patient_id', i)
-                    window.location = "progress_bar.html";
-                })
-                .on("mouseover", function(d, i) {
+                if(inrcData)
                     d3.select(this)
                         .attr("fill", "#87ddb7");
-                    var xPosition = window.event.clientX; // 250 + d.outerRadius * Math.cos( Math.PI * i * (360/12) / 180) ;
-                    var yPosition = window.event.clientY; //  245 + d.outerRadius * Math.sin( Math.PI * i * (360/12) / 180) ;
-                    //Update the tooltip position and value
-                    d3.select("#tooltip")
-                        .style("left", xPosition + "px")
-                        .style("top", yPosition + "px")
-                        .select("#value")
-                        .text(pdata[i]);
-                    d3.select("#tooltip")
-                        .classed("hidden", false);
-                })
-                .on("mouseout", function(d, i) {
-                    d3.select(this)
-                        .attr("fill", warning_colors[calculate_warning_color(modules_data[0].patient_data[i].madrs_score)]);
-                    d3.select("#tooltip").classed("hidden", true);
-                })
-                .attr('d', arcGenerator);
+                var xPosition = window.event.clientX; // 250 + d.outerRadius * Math.cos( Math.PI * i * (360/12) / 180) ;
+                var yPosition = window.event.clientY; //  245 + d.outerRadius * Math.sin( Math.PI * i * (360/12) / 180) ;
+                //Update the tooltip position and value
+                d3.select("#tooltip2")
+                    .style("left", xPosition + "px")
+                    .style("top", yPosition + "px")
+                    .select("#value2")
+                    .text(msg);
+                d3.select("#tooltip2")
+                    .classed("hidden", false);
+            })
+            .on("mouseout", function(d, i) {
+                d3.select(this)
+                    .attr("fill", "grey");
+                d3.select("#tooltip2").classed("hidden", true);
+            })
+            .attr('d', arcGenerator);
 
+    }
+
+
+    function drawProgressArcs(aratio, startbuffer, endBuffer, scaleR, distance, progData) {
+
+        var arcGenerator = d3.arc()
+            .padAngle(0.2)
+            .padRadius(50)
+            .cornerRadius(4);
+
+        var progress_arcData = []
+        progress_arcData.push({startAngle: startbuffer, endAngle: startbuffer + aratio * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + scaleR * distance * progData[0])})
+        for (var i = 0; i < 12; i++) {
+            progress_arcData.push({startAngle: startbuffer + aratio * (i+1) * Math.PI, endAngle: startbuffer + aratio * (i+2) * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + scaleR * distance * progData[i])})
         }
 
+        d3.select('#progress')
+            .selectAll('path')
+            .data(progress_arcData)
+            .enter()
+            .append('path')
+            .attr("fill", "black")
+            .attr('d', arcGenerator);
+    }
 
-        function drawInrcArcs(aratio, startbuffer, endBuffer, distance) {
 
-            var arcGenerator = d3.arc()
-                .padAngle(0.2)
-                .padRadius(50)
-                .cornerRadius(4);
 
-            var inrc_arcData = []
-            inrc_arcData.push({startAngle: startbuffer, endAngle: startbuffer + aratio * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + distance * inrcData[0])})
-            for (var i = 0; i < 12; i++) {
-                inrc_arcData.push({startAngle: startbuffer + aratio * (i+1) * Math.PI, endAngle: startbuffer + aratio * (i+2) * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + distance * inrcData[i])})
-            }
-
-            d3.select('#interaction')
-                .selectAll('path')
-                .data(inrc_arcData)
-                .enter()
-                .append('path')
-                .attr("fill", "grey")
-                .on("click", function(d, i) {
-                    window.location = logpages[i];
-                })
-                .on("mouseover", function(d, i) {
-                    var msg = Math.ceil(inrcData[i]);
-                    if( msg < inrcData[i])
-                        msg = msg + 1;
-
-                    if(inrcData)
-                        d3.select(this)
-                            .attr("fill", "#87ddb7");
-                    var xPosition = window.event.clientX; // 250 + d.outerRadius * Math.cos( Math.PI * i * (360/12) / 180) ;
-                    var yPosition = window.event.clientY; //  245 + d.outerRadius * Math.sin( Math.PI * i * (360/12) / 180) ;
-                    //Update the tooltip position and value
-                    d3.select("#tooltip2")
-                        .style("left", xPosition + "px")
-                        .style("top", yPosition + "px")
-                        .select("#value2")
-                        .text(msg);
-                    d3.select("#tooltip2")
-                        .classed("hidden", false);
-                })
-                .on("mouseout", function(d, i) {
-                    d3.select(this)
-                        .attr("fill", "grey");
-                    d3.select("#tooltip2").classed("hidden", true);
-                })
-                .attr('d', arcGenerator);
-
+    function calculate_warning_color(score) {
+        // Temporary values to favour our data that is randomly generated:
+        // Real ranges should be: 0-6, 7-11, 12-22, 23-29, 30-34 and 35-60 respectively.
+        switch (true) {
+            case score >= 0 && score <= 10:
+                return "low";
+            case score >= 11 && score <= 20:
+                return "low_middle";
+            case score >= 21 && score <= 30:
+                return "middle";
+            case score >= 31 && score <= 40:
+                return "middle_high";
+            case score >= 41 && score <= 50:
+                return "high";
+            case score >= 51 && score <= 60:
+                return "very_high";
+            case score === "N/A":
+                return "undetermined";
         }
-
-
-        function drawProgressArcs(aratio, startbuffer, endBuffer, scaleR, distance) {
-
-            var arcGenerator = d3.arc()
-                .padAngle(0.2)
-                .padRadius(50)
-                .cornerRadius(4);
-
-            var progress_arcData = []
-            progress_arcData.push({startAngle: startbuffer, endAngle: startbuffer + aratio * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + scaleR * distance * progData[0])})
-            for (var i = 0; i < 12; i++) {
-                progress_arcData.push({startAngle: startbuffer + aratio * (i+1) * Math.PI, endAngle: startbuffer + aratio * (i+2) * Math.PI - endBuffer, innerRadius: 43, outerRadius: (44 + scaleR * distance * progData[i])})
-            }
-
-            d3.select('#progress')
-                .selectAll('path')
-                .data(progress_arcData)
-                .enter()
-                .append('path')
-                .attr("fill", "black")
-                .attr('d', arcGenerator);
-        }
-
-
-
-        function calculate_warning_color(score) {
-            // Temporary values to favour our data that is randomly generated:
-            // Real ranges should be: 0-6, 7-11, 12-22, 23-29, 30-34 and 35-60 respectively.
-            switch (true) {
-                case score >= 0 && score <= 10:
-                    return "low";
-                case score >= 11 && score <= 20:
-                    return "low_middle";
-                case score >= 21 && score <= 30:
-                    return "middle";
-                case score >= 31 && score <= 40:
-                    return "middle_high";
-                case score >= 41 && score <= 50:
-                    return "high";
-                case score >= 51 && score <= 60:
-                    return "very_high";
-                case score === "N/A":
-                    return "undetermined";
-            }
-        }
-    });
+    }
 
 </script>
 </body>
